--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/actionBar">
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/exNumbertextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
