--- a/app/src/main/res/layout/activity_workout_user.xml
+++ b/app/src/main/res/layout/activity_workout_user.xml
@@ -8,6 +8,16 @@
     android:background="@color/grey">
 
 
+    <TextView
+        android:id="@+id/daytv2"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/actionBar"
+        android:gravity="center"
+        android:text="kljflkgfjgf"
+        android:layout_alignParentLeft="true" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
@@ -40,10 +50,7 @@
                 android:id="@+id/profile"
                 android:layout_width="29dp"
                 android:layout_height="match_parent"
-
                 android:layout_alignParentStart="true"
-
-
                 android:layout_alignParentTop="true"
                 android:onClick="openDrawer"
                 android:paddingTop="2dp"
@@ -51,17 +58,21 @@
                 tools:ignore="OnClick"
                 android:layout_alignParentLeft="true" />
 
+
+
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/exRecycler"
         android:layout_width="match_parent"
-        android:layout_height="537dp"
+        android:layout_height="456dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@color/grey"
-        android:layout_alignParentLeft="true"
-        />
+        android:background="@color/grey" />
+
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bNavigation"
