--- a/app/src/main/res/layout/card_sets_show.xml
+++ b/app/src/main/res/layout/card_sets_show.xml
@@ -54,8 +54,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="16dp" />
 
-            <EditText
-                android:id="@+id/txtVol"
+            <TextView
+                android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -65,20 +65,24 @@
                 android:ems="10"
                 android:inputType="number"
                 android:layout_marginLeft="11dp"
-                android:layout_alignParentLeft="true" />
+                android:textSize="18dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginVertical="4dp"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/txtRM1"
-                android:layout_width="51dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="91dp"
+                android:layout_marginStart="97dp"
+                android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_edit_text"
                 android:ems="10"
                 android:inputType="number"
-                android:layout_marginLeft="91dp"
-                android:layout_alignParentLeft="true" />
+                android:textSize="18dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="97dp" />
 
             <EditText
                 android:id="@+id/txtWeight"
@@ -91,7 +95,8 @@
                 android:ems="10"
                 android:inputType="number"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="134dp" />
+                android:layout_marginRight="134dp"
+                android:layout_marginVertical="4dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
