--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -26,7 +26,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewMu"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop" />
@@ -38,7 +38,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="45dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/icons_meal_px"
+                android:src="@drawable/workoutcount"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="45dp" />
 
@@ -49,22 +49,21 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="165dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/calories"
+                android:src="@drawable/mouscle"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="165dp" />
 
             <TextView
-                android:id="@+id/textViewShortDesc"
+                android:id="@+id/txtMu"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:gravity="center_vertical"
-                android:text="العضلات المستهدفة"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="16dp" />
+                android:text="العضلات المستهدفة" />
 
             <TextView
                 android:id="@+id/txtNameExercise"
