--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Add_meal2user">
+    tools:context=".Fragment.Add_workout2user">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -17,7 +17,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativeLayout3"
             android:layout_width="match_parent"
-            android:layout_height="416dp"
+            android:layout_height="476dp"
             android:background="@color/grey">
 
             <RelativeLayout
@@ -39,7 +39,7 @@
             <Spinner
                 android:id="@+id/spinner5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -52,7 +52,7 @@
             <Spinner
                 android:id="@+id/spinner8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -65,7 +65,7 @@
             <Spinner
                 android:id="@+id/spinner10"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -78,12 +78,12 @@
             <Spinner
                 android:id="@+id/spinner7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:layout_marginTop="13dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
                 app:layout_constraintTop_toBottomOf="@+id/relative" />
 
             <android.support.v7.widget.CardView
@@ -141,23 +141,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="71dp"
-                    android:text="الجلسات"
-                    android:textColor="@color/md_white_1000"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="71dp" />
+                    android:layout_marginEnd="71dp"
+                    android:layout_marginRight="71dp"
+                    android:text="الجلسات"
+                    android:textColor="@color/md_white_1000" />
 
                 <TextView
                     android:id="@+id/txtRepsShow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
 
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="71dp"
                     android:layout_marginStart="71dp"
                     android:text="التكرار"
-                    android:textColor="@color/md_white_1000"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="71dp" />
+                    android:textColor="@color/md_white_1000" />
             </RelativeLayout>
 
         </android.support.constraint.ConstraintLayout>
@@ -207,16 +207,16 @@
 
         <Button
             android:id="@+id/addNewExerciseBtn"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginRight="45dp"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:text="إضافة تمرين جديد"
             android:backgroundTint="@color/scifitRed"
-            android:textColor="@color/md_white_1000"
-            android:fontFamily="@font/cairo_semibold"/>
+            android:fontFamily="@font/cairo_semibold"
+            android:text="إضافة تمرين جديد"
+            android:textColor="@color/md_white_1000" />
 
     </LinearLayout>
 </ScrollView>
