--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -108,17 +108,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ageTxt">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
-                android:layout_marginRight="12dp"
-                android:layout_alignParentRight="true" />
-
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="match_parent"
@@ -144,16 +133,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
 
-            <ImageView
-                android:id="@+id/imageView65"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="12dp" />
 
             <Spinner
                 android:id="@+id/spinner3"
@@ -179,7 +158,7 @@
             android:ems="10"
             android:gravity="right"
             android:hint="الطول"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
@@ -227,7 +206,7 @@
             android:ems="10"
             android:gravity="right"
             android:hint="الوزن"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
@@ -248,7 +227,7 @@
             android:ems="10"
             android:gravity="right"
             android:hint="العمر"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
