--- a/app/src/main/res/layout/card_sets_show_free.xml
+++ b/app/src/main/res/layout/card_sets_show_free.xml
@@ -25,21 +25,18 @@
             <EditText
                 android:id="@+id/etReps"
                 android:layout_width="51dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="34dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginStart="13dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
-                android:inputType="number"
                 android:gravity="center"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/txtSet"
                 app:layout_constraintStart_toEndOf="@+id/txtWeight"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/txtSet"
@@ -47,7 +44,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="18dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
@@ -57,49 +56,45 @@
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/etReps"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
-                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginStart="9dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/txtRM1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btn_delet"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/txtRM1"
-                android:layout_width="62dp"
+                android:layout_width="54dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginRight="17dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginStart="9dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
+
                 android:ems="10"
                 android:gravity="center"
-
                 android:inputType="number"
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/txtWeight"
                 app:layout_constraintStart_toEndOf="@+id/textViewVolume"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.428" />
@@ -109,18 +104,28 @@
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
-                android:inputType="number"
                 android:gravity="center"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtRM1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.428" />
+
+            <Button
+                android:id="@+id/btn_delet"
+                android:layout_width="33dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="X"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
