--- a/app/src/main/res/layout/card_sets_show_free.xml
+++ b/app/src/main/res/layout/card_sets_show_free.xml
@@ -24,161 +24,98 @@
 
             <EditText
                 android:id="@+id/etReps"
-<<<<<<< HEAD
-                android:layout_width="43dp"
-=======
-                android:layout_width="51dp"
-
-
-                android:maxLength="2"
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:layout_marginStart="-111dp"
                 android:layout_marginVertical="4dp"
-                android:layout_toStartOf="@+id/txtSet"
+                android:layout_toEndOf="@+id/txtWeight"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
-<<<<<<< HEAD
-                android:maxLength="2" />
-=======
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtWeight"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:maxLength="2"
+                android:layout_marginLeft="-111dp"
+                android:layout_toRightOf="@+id/txtWeight" />
+
 
             <TextView
                 android:id="@+id/txtSet"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-<<<<<<< HEAD
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginRight="15dp"
-=======
                 android:layout_marginBottom="4dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginLeft="18dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="4dp"
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
                 android:gravity="center"
                 android:inputType="number"
                 android:text="1"
                 android:textSize="18dp"
-<<<<<<< HEAD
                 android:layout_alignParentRight="true" />
 
-            <TextView
-                android:id="@+id/textViewVolume"
-                android:layout_width="57dp"
-=======
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/etReps"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="9dp"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="36dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="34dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
-<<<<<<< HEAD
-                android:textSize="18dp" />
-
-            <TextView
-                android:id="@+id/txtRM1"
-                android:layout_width="53dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="76dp"
-=======
                 android:textSize="18dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_delet"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="34dp" />
+
 
             <TextView
                 android:id="@+id/txtRM1"
                 android:layout_width="54dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="9dp"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="4dp"
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="110dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
-
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
-<<<<<<< HEAD
-                android:textSize="18dp" />
-=======
                 android:textSize="18dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textViewVolume"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="110dp" />
 
             <EditText
                 android:id="@+id/txtWeight"
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
-<<<<<<< HEAD
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="111dp"
-=======
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:layout_marginEnd="117dp"
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
-<<<<<<< HEAD
-                android:maxLength="3" />
+                android:maxLength="3"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="117dp" />
         </RelativeLayout>
-=======
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtRM1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.428" />
 
             <Button
                 android:id="@+id/btn_delet"
                 android:layout_width="33dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:text="X"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
->>>>>>> 40ea0f270825fc254aec2e73255b97b1aa324c78
+                android:text="X" />
     </android.support.v7.widget.CardView>
 
 
