--- a/app/src/main/res/layout/bubbleschatadmin.xml
+++ b/app/src/main/res/layout/bubbleschatadmin.xml
@@ -78,14 +78,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="464dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginStart="30dp"
         android:gravity="center"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
+        app:layout_constraintBottom_toTopOf="@+id/reyclerview_message_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
