--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -89,7 +89,11 @@
 
         </android.support.v7.widget.CardView>
 
-
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="50dp"
+            android:layout_height="44dp"
+            android:text="Next" />
 
 
     </android.support.design.widget.AppBarLayout>
