--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -17,7 +17,8 @@
         android:background="@color/md_white_1000"
         app:layout_constraintBottom_toTopOf="@+id/actionBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_alignParentLeft="true">
 
 
         <TextView
@@ -47,6 +48,8 @@
             android:orientation="horizontal"
             >
 
+
+
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="100dp"
@@ -64,7 +67,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="167dp"
+        android:layout_height="192dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/actionBar"
@@ -74,29 +77,65 @@
         android:gravity="center">
 
 
-
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:layout_marginHorizontal="45dp"
-            >
+            android:layout_marginHorizontal="45dp">
 
             <ImageView
                 android:id="@+id/mealimg"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="124dp"
                 android:src="@drawable/addpic" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
 
         </android.support.v7.widget.CardView>
 
-        <Button
-            android:id="@+id/btnNext"
-            android:layout_width="50dp"
-            android:layout_height="44dp"
-            android:text="Next" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnNext"
+                android:layout_width="match_parent"
+                android:layout_height="41dp"
+                android:layout_alignTop="@+id/addMoreMeals2"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_toLeftOf="@+id/addMoreMeals2"
+                android:layout_toStartOf="@+id/addMoreMeals2"
+                android:layout_weight="1"
+                android:backgroundTint="@color/scifitRed"
+                android:text="الوجبة التالية"
+
+                android:textColor="@color/md_white_1000" />
+
+            <Button
+                android:id="@+id/btnPreviousMeal"
+                android:layout_width="match_parent"
+                android:layout_height="41dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="25dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/scifitBlue"
+                android:text="الوجبة السابقة"
+                android:textColor="@color/md_white_1000" />
+
+        </LinearLayout>
 
 
     </android.support.design.widget.AppBarLayout>
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout_id"
@@ -104,11 +143,12 @@
         android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/appbarid"
+        android:layout_centerVertical="true"
         android:background="#333333"
         app:tabGravity="fill"
-        app:tabSelectedTextColor="@color/md_white_1000"
         app:tabIndicatorColor="#0f0f0f"
         app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/md_white_1000"
         app:tabTextColor="#a39e9e"
         android:layout_alignParentLeft="true" />
 
@@ -131,6 +171,8 @@
         android:layout_below="@+id/tablayout_id"
         android:background="@color/grey"
         />
+
+
 
 
 </RelativeLayout>
