--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -8,6 +8,7 @@
     android:clipToPadding="false">
 
     <TextView
+        android:layout_marginTop="55dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text_message_body"
@@ -28,5 +29,21 @@
         android:layout_marginLeft="4dp"
         android:layout_toLeftOf="@+id/text_message_body"
         android:layout_below="@+id/text_message_body"/>
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/date_chat"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Sep 26, 2018"
+        android:textColor="#fff"
+        android:textSize="18dp" />
+
+
 
 </RelativeLayout>
