--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -25,7 +25,22 @@ android:clipToPadding="false">
     android:paddingBottom="4dp"
     android:text="Rose"/>
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_alignTop="@+id/avatar"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/date_chat"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Sep 26, 2018"
+        android:textColor="#fff"
+        android:textSize="18dp" />
+
 <TextView
+    android:layout_marginTop="20dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/text_message_body"
